delete no endpoint /sales
